# Dashboard

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: ingester-tests.yml
docs/: architecture-v1.md  operations.md
docs/examples/: README.md  ctrl_v1_example.csv  gps_v1_extended.csv  gps_v1_minimal.csv  gps_v1_with_extra_columns.csv  gps_v1_with_nmea_direction_columns.csv  imu_v1_example.csv  wind_v1_example.csv
infra/: .env.example  docker-compose.yml
infra/grafana/provisioning/dashboards/: agir-dashboard.json  dashboard.yaml
infra/grafana/provisioning/datasources/: influxdb.yaml
ingester/: pyproject.toml
ingester/src/ingester/: checkpoint.py  main.py  mqtt_listener.py  parser.py  processor.py  schema.py  writer.py
ingester/tests/: conftest.py  test_checkpoint.py  test_parser.py  test_processor.py  test_schema.py  test_writer.py
lora/: bridge.py  frame.py
pi/: publisher.py  simulate.py
