[project]
name = "ingester"
version = "0.1.0"
description = "Ägir Dashboard CSV ingester — watches incoming/ and writes to InfluxDB"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.40",
]

[project.scripts]
ingester = "ingester.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingester"]
