[project]
name = "ingester"
version = "0.1.0"
description = "Ägir Dashboard CSV ingester — watches incoming/ and writes to InfluxDB"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.40",
    "paho-mqtt>=2.0",
    "watchdog>=4.0",
]

[project.scripts]
ingester = "ingester.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingester"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
